[project]
name = "koi-net-slack-telescope-node"
version = "0.1.0"
description = "Implementation of KOI-net Slack Telescope node"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=2.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "rich>=14.0.0",
    "slack_bolt>=1.23.0",
    "aiohttp>=3.13.3",
]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-coordinator-node/"
